# warden

./: .gitignore  Cargo.toml  LICENSE-MIT  README.adoc
.github/workflows/: ci.yml  release.yml
crates/kedi/: Cargo.toml  README.adoc
crates/kedi-app/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
crates/kedi-app/capabilities/: default.json
crates/kedi-app/icons/: icon.icns
crates/kedi-app/src/: main.rs
crates/kedi-app/ui/: app.js  index.html  styles.css
crates/kedi/src/: index.html  lib.rs  main.rs  plugin_cli.rs  raw.html
crates/warden/: Cargo.toml
crates/warden-caps/: Cargo.toml
crates/warden-caps/src/: ai.rs  dstask.rs  exec.rs  fs.rs  lib.rs  pty.rs
crates/warden-core/: Cargo.toml
crates/warden-core/src/: lib.rs
crates/warden-gateway/: Cargo.toml
crates/warden-gateway/src/: lib.rs
crates/warden-host/: Cargo.toml
crates/warden-host/src/: lib.rs  tests.rs
crates/warden-record/: Cargo.toml
crates/warden-record/src/: lib.rs
crates/warden-secret/: Cargo.toml
crates/warden-secret/src/: lib.rs
crates/warden-transport/: Cargo.toml
crates/warden-transport/src/: lib.rs
crates/warden-wasm/: Cargo.toml
crates/warden-wasm/src/: app.rs  component.rs  lib.rs
crates/warden-wasm/tests/fixture/: Cargo.toml
crates/warden-wasm/tests/fixture/src/: lib.rs
crates/warden-web/: Cargo.toml
crates/warden-web/src/: index.html  lib.rs
crates/warden/src/: main.rs
docs/: DESIGN.md  architecture.d2  boundary.md  composition.d2  detachable-sessions.md  kedi-topology.md  plugins-wasm-tui.md
guest/: Cargo.toml
guest-app/: Cargo.toml
guest-app/src/: lib.rs
guest-deck/: Cargo.toml
guest-deck/src/: ansi.rs  lib.rs  model.rs  task.rs  view.rs
guest/src/: lib.rs
packaging/: install.sh  kedi.desktop
wit/action/: warden.wit
wit/app/: app.wit
