# warden — governed execution: actions touch the world only through capabilities the warden
# grants, mediates, and records. Sans-IO kernel (warden-core) + capability/record/secret/wasm/
# transport impls + kedi, the governed web terminal built on it.
[workspace]
resolver = "2"
exclude = ["guest"]                     # different target (wasm32-wasip2), own workspace
members = [
    "crates/kedi",
    "crates/kedi-app",
    "crates/warden-core",
    "crates/warden-host",
    "crates/warden-caps",
    "crates/warden-gateway",
    "crates/warden-record",
    "crates/warden-secret",
    "crates/warden-transport",
    "crates/warden-wasm",
    "crates/warden",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kannonski/warden"

# shared async deps — the kernel and its impls go async behind dyn seams, so async-trait (boxed
# futures, dyn-compatible) is the pragmatic choice over native async-fn-in-trait.
[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs", "process"] }

# lean, fast release artifacts (the kedi binary is a download)
[profile.release]
strip = true
lto = "thin"
