# A minimal kedi:app guest — proves the WASM-TUI spine (init → render → on-key → quit) end to end.
#
#   cargo build --release --target wasm32-wasip2
#
# Standalone workspace on purpose — it builds for a different target than the host crates.
[package]
name = "kedi-app-hello"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.58"

[workspace]
