# The demo action: a Rust guest of wit/warden.wit, compiled to a wasm component.
#
#   cargo build --release --target wasm32-wasip2
#
# Standalone workspace on purpose — it builds for a different target than the host crates.
[package]
name = "warden-guest-demo"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.58"

[workspace]
