[package]
name = "kedi-app"
description = "kedi-app — the native (Tauri) shell for the governed terminal; sessions over Tauri IPC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"                                # watch ui/ → auto-reload the window on edit (hot-swap)
include_dir = "0.7"                          # embed the default ui/ to seed the on-disk hot-swap copy
tokio = { workspace = true }
kedi = { path = "../kedi" }                  # reuse run_pane + terminal_warden (the warden backend)
warden-core = { path = "../warden-core" }    # the Warden type held in app state
