[package]
name = "kedi-app"
description = "kedi-app — the native (Tauri) shell for the governed terminal; sessions over Tauri IPC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] } # transparent window + vibrancy blur
tauri-plugin-clipboard-manager = "2"          # reliable copy/paste in WKWebView (navigator.clipboard is blocked on kedi://)
tauri-plugin-opener = "2"                      # open clicked links in the system browser
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"                                # watch ui/ → auto-reload the window on edit (hot-swap)
include_dir = "0.7"                          # embed the default ui/ to seed the on-disk hot-swap copy
sha2 = "0.10"                                # per-file hashes for seed-versioning (push UI updates)
base64 = "0.22"                              # compact pane-output framing over the IPC channel
tokio = { workspace = true }
kedi = { path = "../kedi" }                  # reuse run_pane + terminal_warden (the warden backend)
warden-core = { path = "../warden-core" }    # the Warden type held in app state
