[package]
name = "warden-caps"
description = "Capability implementations for warden: fs.read, hash-pinned exec, interactive pty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# Capability-type implementations (fs.read, exec, …) + their brokers. Each capability is one module
# implementing the two core traits — adding a capability-type never touches the kernel.
[dependencies]
warden-core = { path = "../warden-core" }
sha2 = "0.10"                                 # binary hash-pinning for the exec capability
portable-pty = "0.8"                          # cross-platform PTY for the pty capability
