[package]
name = "warden-core"
description = "Sans-IO governed-execution kernel: one mediation chokepoint behind 8 swappable seams (capability, broker, policy, approver, interceptor, recorder, runtime, transport)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The sans-IO kernel: the seam traits + the mediation flow. Still IO-free (it performs no reads/
# writes/network and schedules nothing), but async now, so it carries the minimal async vocabulary:
# async-trait (dyn-compatible async seam methods) and futures (the Stream type for output()).
[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }

# tests only: an async runtime to drive detachable sessions' pump futures + tokio channels for the
# mock streaming capability. The kernel itself stays runtime-agnostic (the caller spawns the pump).
[dev-dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
