[package]
name = "warden-gateway"
description = "Reverse-tunnel QUIC gateway for warden: nodes dial out, clients route by name, no inbound ports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The remote axis. Wardens dial OUT and register (reverse tunnel, no inbound ports); clients reach
# a warden by name; the gateway splices the two so the WARDEN still runs and enforces end-to-end.
# A pure router — it moves bytes, it is not the enforcement point. Depends on warden-transport only
# for the shared rendezvous wire types.
[dependencies]
warden-transport = { path = "../warden-transport" }
serde_json = "1"
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
