[package]
name = "warden-transport"
description = "QUIC transport for warden sessions: the reply stream IS the post-mask audit trail"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The `Transport` seam over QUIC (quinn): TLS 1.3 on the wire + native stream multiplexing (one
# session = one bidi stream). JSON-lines protocol unchanged — the reply stream IS the record format
# (RecEvent), so a client's live view is the audit trail, post-mask. QUIC forces async (tokio) +
# certs; both are confined here, the kernel stays sync — a per-transport runtime bridges the sync
# `Recorder` to the async send stream over a channel.
[dependencies]
async-trait = { workspace = true }
warden-core = { path = "../warden-core" }
warden-record = { path = "../warden-record" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
