[package]
name = "warden-web"
description = "Minimal browser console for warden: SSE event stream + xterm.js viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The browser front door: xterm.js console over the same governed session model. Hand-rolled
# HTTP + SSE (std only + serde_json) — the browser's live view is the event stream, post-mask,
# identical to the TCP client's. Decision #3 made real: xterm.js renders, the warden governs.
[dependencies]
warden-core = { path = "../warden-core" }
warden-record = { path = "../warden-record" }
serde_json = "1"
